feat: added suggestions functionality
